newpolicy greedy